feat: workout_session_exercises 중간 테이블 도입으로 세션 구조 개선